# RedWithinBlue

./: .gitignore  README.md  pyproject.toml  run_all_sweeps.sh
configs/: adv-ladder-r1-6x6-1b1r.yaml  adv-ladder-r2-8x8-2b1r.yaml  adv-ladder-r3-16x16-3b1r.yaml  adv-ladder-r4-16x16-4b3r.yaml  adv-ladder-r5-32x32-7b3r.yaml  adv-ladder-r6-32x32-6b4r.yaml  compromise-16x16-3b1r.yaml  octa-cooperate-coop-32-r6-conn.yaml  octa-cooperate-coop-32-r6-nocoop.yaml  octa-cooperate-coop-32-r6-norm.yaml  octa-cooperate-coop-32-r6.yaml  pair-cooperate-coop.yaml  pair-cooperate.yaml  quad-cooperate-coop-16-norm.yaml  quad-cooperate-coop-16.yaml  quad-cooperate-coop-32-norm.yaml  quad-cooperate-coop-32.yaml  quad-cooperate-coop-8-norm.yaml  quad-cooperate-coop-8.yaml  quad-cooperate-coop.yaml  solo-explore.yaml  stage0-tiny.yaml  survey-local-16-N1.yaml  survey-local-16-N4-spread.yaml  survey-local-16-N4.yaml  survey-local-16-N5-from-N4.yaml  survey-local-16-N7-from-N4.yaml  survey-local-16-N7-spread.yaml  survey-local-16-N7.yaml  survey-local-16fast-1red-4blue.yaml  survey-local-16fast-N1.yaml  survey-local-16fast-N5-fog.yaml  survey-local-16fast-N5-v2.yaml  survey-local-16fast-N5.yaml  survey-local-32-N8-spread-chained.yaml  survey-local-32-N8-spread.yaml  survey-local-32-N8.yaml  survey-local-8-N1.yaml  survey-local-8-N2.yaml  team-coordinate.yaml
docs/: 01-rl-overview.md  02-rl-training-guide.md  03-rl-taxonomy.md  04-environment-api.md  05-environment-design-spec.md  06-experiment-report.md  07-architecture-guide.md  08-stabilization-experiments.md  09-engineering-retrospective.md  (+1 more)
(+288 files in other folders)
