[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "red-within-blue"
version = "0.1.0"
description = "JAX-native multi-agent RL environment with communication graphs"
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "flax>=0.7",
    "chex>=0.1",
    "jaxmarl>=0.1",
    "matplotlib>=3.5",
    "numpy",
    "optax>=0.1",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
